[package]
name = "sec-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
lazy_static = "1.4.0"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
sha2 = "0.9.8"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "rsa_gen"
harness = false
